@@ -1,3 +1,8 @@
+2012-12-08  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gnat.dg/vect9.ad[sb]: New test.
+	* gnat.dg/vect9_pkg.ads: New helper.
+
 2012-12-07  Mike Stump  <mikestump@comcast.net>
 
 	* gnat.dg/discr38.adb: Don't use ^M line endings.
