@@ -1,3 +1,7 @@
+2012-12-08  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* tree-ssa-loop-im.c (for_each_index) <CONST_DECL>: New case.
+
 2012-12-07  Steven Bosscher  <steven@gcc.gnu.org>
 
 	* ree.c (struct ext_cand): Remove GTY markers.
